--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -124,20 +124,20 @@
         <p>Shows:</p>
         <table class="tableizer-table">
           <thead><tr><td>Name</td><td>Progress</td><td>Type</td><td>Score</td><td>Notes</td></tr></thead><tbody>
-            <tr><td class="wat">Jujutsu Kaisen</td><td>17</td><td>Tv</td><td class="a0">~</td><td>salmon</td></tr>      
+            <tr><td class="wat">Watashi ga Motenai no wa dō Kangaetemo Omaera ga Warui!</td><td>4</td><td>Tv</td><td class="a0">~</td><td>a cringe comedy for the decade</td></tr>
             
             <tr><td class="fav">Shin Seiki Evangelion </td><td>26</td><td>Tv</td><td class="a9">9.6</td><td>a true classic</td></tr>
             <tr><td class="fav">Fullmetal Alchemist: Brotherhood</td><td>64</td><td>Tv</td><td class="a9">9.6</td><td>good fun for the whole family</td></tr>
             <tr><td class="fav">Shigatsu wa Kimi no Uso</td><td>22</td><td>Tv</td><td class="a9">9.6</td><td>wanna cry?</td></tr>
             <tr><td class="fav">Steins;Gate </td><td>24</td><td>Tv</td><td class="a9">9.6</td><td>haAcking to the gate!</td></tr>
-            <tr><td class="fav">Serial Experiments Lain </td><td>13</td><td>Tv</td><td class="a9">9.5</td><td>lets all love lain</td></tr>
+            <tr><td class="fav">Serial Experiments Lain </td><td>13</td><td>Tv</td><td class="a9">9.6</td><td>lets all love lain</td></tr>
             <tr><td class="fav">Bakemonogatari </td><td>15</td><td>Tv</td><td class="a9">9.5</td><td>the classic </td></tr>
             <tr><td class="fav">Kizumonogatari </td><td>3</td><td>Film</td><td class="a9">9.5</td><td>the pinnacle of gatari-animation</td></tr>
             <tr><td class="fav">Death Note </td><td>37</td><td>Tv</td><td class="a9">9.5</td><td>if only it ended after the first season</td></tr>
             <tr><td class="fav">No Game No Life </td><td>12</td><td>Tv</td><td class="a9">9.3</td><td>if i actually remembered that there is ecchi this would have a much lower rating</td></tr>
             <tr><td class="fav">Kabukimonogatari </td><td>4</td><td>Tv</td><td class="a9">9.3</td><td>the TWISTORY one alright</td></tr>
-            <tr><td class="fav">Ansatsu Kyoushitsu </td><td>22</td><td>Tv</td><td class="a8">9.2</td><td>way more insipring that it has any right to be</td></tr>
-            <tr><td class="fav">Ansatsu Kyoushitsu 2 </td><td>25</td><td>Tv</td><td class="a8">9.2</td><td>way more insipring that it has any right to be pt. 2</td></tr>
+            <tr><td class="fav">Ansatsu Kyoushitsu </td><td>22</td><td>Tv</td><td class="a9">9.2</td><td>way more insipring that it has any right to be</td></tr>
+            <tr><td class="fav">Ansatsu Kyoushitsu 2 </td><td>25</td><td>Tv</td><td class="a9">9.2</td><td>way more insipring that it has any right to be pt. 2</td></tr>
             <tr><td class="fav">Kobayashi-san Chi no Maidragon </td><td>13</td><td>Tv</td><td class="a9">9.2</td><td>top tier slice of life</td></tr>
             <tr><td class="fav">Nisemonogatari </td><td>11</td><td>Tv</td><td class="a9">9</td><td>the one with the <i>toothbrush</i> scene</td></tr>
             <tr><td class="fav">Nekomonogatari (Kuro) </td><td>4</td><td>Tv</td><td class="a9">9</td><td>the one with a better ed than op</td></tr>
@@ -233,6 +233,8 @@
             <tr><td class="cmp">Satsuriku no Tenshi </td><td>12</td><td>Tv</td><td class="a4">4.7</td><td>a better game then show</td></tr>
             <tr><td class="cmp">Guilty Crown </td><td>22</td><td>Tv</td><td class="a4">4.6</td><td>was fun to laugh at, pretty music</td></tr>
             <tr><td class="cmp">Tengen Toppa Gurren Lagann </td><td>27</td><td>Tv</td><td class="a4">4.6</td><td>quite a shock when they did *spoiler*</td></tr>
+            <tr><td class="cmp">Jujutsu Kaisen</td><td>24</td><td>Tv</td><td class="a4">4.6</td><td></td></tr>      
+            
             <tr><td class="cmp">K </td><td>13</td><td>Tv</td><td class="a4">4.4</td><td>maximum boring why did i rate this so high</td></tr>
             <tr><td class="cmp">Poputepipikku </td><td>12</td><td>Tv</td><td class="a4">4.4</td><td>not my thing</td></tr>
             <tr><td class="drp">Little Witch Academia (TV) </td><td>3</td><td>Tv</td><td class="a4">4.4</td><td>seems good? </td></tr>
