--- a/lists/games/index.html
+++ b/lists/games/index.html
@@ -93,7 +93,7 @@
           <p>Status:</p>
         
           <table class="tableizer-table">
-            <tr><td><center>Total Game Count: 554</center></td></tr>
+            <tr><td><center>Total Game Count: 555</center></td></tr>
                <tr><td>Estimated List Completeness: ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱ 70%</td></tr>
             </tbody></table>  
 
@@ -106,6 +106,7 @@
                
                <tr><td class="ong">This Spreadsheet</td><td>Y</td><td>N</td><td>PC</td><td>I wish</td><td>&nbsp;</td></tr>
                <tr><td class="ong">Hylics</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td></td></tr>
+               <tr><td class="ong">Slender: The Arrival</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td></td></tr>
 
                <tr><td class="onh">Super Mario 64</td><td>N</td><td>Y</td><td>N64</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td class="onh">Super Mario Sunshine</td><td>N</td><td>Y</td><td>Gamecube</td><td>Plan to</td><td></td></tr>
