--- a/ongoing/index.html
+++ b/ongoing/index.html
@@ -65,6 +65,17 @@
 
 
 						
+						<div id="content">
+							<h3 style="float: right; right: 4px;">Phone Coin</h3>
+							<p>-----</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								phone case for samsung galaxy s21 that also holds a coin / don't ask</li>
+							</ol>
+							<div class="label">
+								<p><a href="/projects/phone">Read More</a></p>
+							</div>
+						</div>			
 					
 
 			
