--- a/re/side.html
+++ b/re/side.html
@@ -33,6 +33,7 @@
   </ul>
 <a href="https://relivesight.com/ongoing/">Ongoing Projects</a>
   <ul>
+    <li><a href="https://relivesight.com/projects/phone/">phone coin</a></li>
   <li><a href="https://relivesight.com/projects/cyberdeck/">cyberdeck</a></li>
   <li><a href="https://relivesight.com/projects/potentials/">potentials</a></li>
   </ul>
