--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -124,7 +124,7 @@
         <p>Shows:</p>
         <table class="tableizer-table">
           <thead><tr><td>Name</td><td>Progress</td><td>Type</td><td>Score</td><td>Notes</td></tr></thead><tbody>
-            <tr><td class="wat">Show By Rock!!</td><td>8</td><td>Tv</td><td class="a0">~</td><td></td></tr>
+            <tr><td class="wat">Show By Rock!!</td><td>9</td><td>Tv</td><td class="a0">~</td><td></td></tr>
             
             
             <tr><td class="fav">Shin Seiki Evangelion </td><td>26</td><td>Tv</td><td class="a9">9.6</td><td>a true classic</td></tr>
@@ -187,6 +187,7 @@
             <tr><td class="cmp">Princess Jellyfish</td><td>11</td><td>Tv</td><td class="a6">6.7</td><td>handled crossdressing really well, thanks</td></tr>         
             <tr><td class="cmp">Youjo Senki </td><td>12</td><td>Tv</td><td class="a6">6.6</td><td></td></tr>
             <tr><td class="cmp">Chuunibyou demo Koi ga Shitai! </td><td>12</td><td>Tv</td><td class="a6">6.5</td><td>cute imagination fantasy romance </td></tr>
+            <tr><td class="cmp">Koukaku Kidoutai</td><td>1</td><td>Film</td><td class="a0">6.5</td><td>wasnt too impressed, still pretty tho</td></tr>
             <tr><td class="cmp">Saiki Kusuo no Ψ Nan (TV) </td><td>20</td><td>Tv</td><td class="a6">6.5</td><td></td></tr>
             <tr><td class="cmp">Shoujo Shuumatsu Ryokou </td><td>12</td><td>Tv</td><td class="a6">6.5</td><td>really accurate postapocolyptic life</td></tr>
             <tr><td class="cmp">Gamers! </td><td>12</td><td>Tv</td><td class="a6">6.5</td><td>i mean its called gamers cmon</td></tr>
@@ -294,8 +295,7 @@
             <tr><td class="pas">Karakai Jouzu no Takagi-san </td><td>2</td><td>Tv</td><td class="a0">~</td><td></td></tr>
            <tr><td class="pas">Harmony </td><td>0</td><td>Film</td><td class="a0">~</td><td></td></tr>
 
-           <tr><td class="cmp">Koukaku Kidoutai</td><td>1</td><td>Film</td><td class="a0">~</td><td></td></tr>
-            <tr><td class="cmp">Steins;Gate: Soumei Eichi no Cognitive Computing </td><td>4</td><td>Tv</td><td class="a0">~</td><td></td></tr>
+          <tr><td class="cmp">Steins;Gate: Soumei Eichi no Cognitive Computing </td><td>4</td><td>Tv</td><td class="a0">~</td><td></td></tr>
             <tr><td class="cmp">Shingeki no Kyojin 3 Part 2 </td><td>10</td><td>Tv</td><td class="a0">~</td><td></td></tr>
             <tr><td class="cmp">Shingeki! Kyojin Chuugakkou </td><td>12</td><td>Tv</td><td class="a0">~</td><td></td></tr>
             <tr><td class="cmp">Steins;Gate: Oukoubakko no Poriomania </td><td>1</td><td>Tv</td><td class="a0">~</td><td></td></tr>
@@ -321,7 +321,7 @@
          <tr><td class="drp">Sword Art Online: Alicization </td><td>1</td><td>Tv</td><td class="a0">~</td><td>no</td></tr>
          <tr><td class="drp">Hiorigime My Hero </td><td>1</td><td>Tv</td><td class="a0">~</td><td></td></tr>
          <tr><td class="drp">Dororo </td><td>2</td><td>Tv</td><td class="a0">~</td><td></td></tr>
-         <tr><td class="drp">Horimiya </td><td>2</td><td>Tv</td><td class="a0">~</td><td></td></tr>
+         <tr><td class="drp">Horimiya </td><td>7</td><td>Tv</td><td class="a0">~</td><td></td></tr>
          <tr><td class="drp">Alice in Deadly School </td><td>3</td><td>Tv</td><td class="a0">~</td><td></td></tr>
          <tr><td class="drp">Soul Eater </td><td>1</td><td>Tv</td><td class="a0">~</td><td></td></tr>
          <tr><td class="drp">Star Driver: Kagayaki no Takuto </td><td>4</td><td>Tv</td><td class="a0">~</td><td></td></tr>
