--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
               <a href="/blog/" class="navi" ><img src="images/nav/flow1.png">most recently updated page: blog <img src="images/nav/flow1.png"></a>
               ------------------------∞✧༺​♡༻✧∞------------------------</p>
 
+              <div class="col-sm-3 col-md-2"><img src="images/home/z1.png" class="img-center"></div>
+              <div class="col-sm-9 col-md-offset-1">
+                <h3 style="margin-bottom:10px;">04/27/20 </h3>
+                <p style="margin-bottom:30px;">update: ver.1.22474487139...</p>
+              </div>
+
 
               <div class="col-sm-3 col-md-2"><img src="images/home/z2.png" style="margin-left:18px;height:90px;" class="img-center"></div>
               <div class="col-sm-9 col-md-offset-1">
