--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -112,7 +112,7 @@
         <p>Status:</p>
         
         <table class="tableizer-table">
-          <tr><td><center>Total Show Count: 221</center></td></tr>
+          <tr><td><center>Total Show Count: 222</center></td></tr>
              <tr><td>Estimated List Completeness [Limited Accuracy] : ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱ 80%</td></tr>
              <tr><td>Note: ratings were placed after completion of the show (with some adjustment) and are extremely susceptible to timely bias, they
               reflect a unbalanced combination of both my enjoyment of them and how good i believe they are. 
@@ -124,7 +124,7 @@
         <p>Shows:</p>
         <table class="tableizer-table">
           <thead><tr><td>Name</td><td>Progress</td><td>Type</td><td>Score</td><td>Notes</td></tr></thead><tbody>
-            <tr><td class="wat">Welcome to the N.H.K.</td><td>7</td><td>Tv</td><td class="a0">~</td><td></td></tr>
+            <tr><td class="wat">Welcome to the N.H.K.</td><td>8</td><td>Tv</td><td class="a0">~</td><td></td></tr>
             
             <tr><td class="fav">Shin Seiki Evangelion </td><td>26</td><td>Tv</td><td class="a9">9.6</td><td>a true classic</td></tr>
             <tr><td class="fav">Steins;Gate </td><td>24</td><td>Tv</td><td class="a9">9.6</td><td>haAcking to the gate!</td></tr>
@@ -241,6 +241,7 @@
             <tr><td class="drp">Dungeon ni Deai wo Motomeru no wa Machigatteiru Darou ka II </td><td>7</td><td>Tv</td><td class="a4">4.1</td><td>its alright im just done with it</td></tr>
             <tr><td class="cmp">Kekkai Sensen </td><td>12</td><td>Tv</td><td class="a4">4.1</td><td>the fun dance at the end, why did i rate this so low i remember it fondly</td></tr>
             <tr><td class="cmp">New Game! </td><td>12</td><td>Tv</td><td class="a4">4.1</td><td></td></tr>
+            <tr><td class="cmp">Howl's Moving Castle </td><td>1</td><td>Film</td><td class="a4">4.1</td><td></td></tr>
             <tr><td class="cmp">Sora yori mo Tooi Basho </td><td>13</td><td>Tv</td><td class="a4">4.1</td><td>cool antarctica show</td></tr>
             <tr><td class="cmp">Tensei Shitara Slime Datta Ken </td><td>24</td><td>Tv</td><td class="a4">4.1</td><td></td></tr>
             <tr><td class="wat">Re:Zero kara Hajimeru Isekai Seikatsu 2nd Season</td><td>13</td><td>Tv</td><td class="a4">4.1</td><td>invalidated s1 story but i still cried</td></tr>       
