--- a/lists/games/index.html
+++ b/lists/games/index.html
@@ -108,6 +108,7 @@
                <tr><td class="ong">NieR Replicant ver.1.22474487139...</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td></td></tr>
                <tr><td class="ong">Portal Reloaded</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td></td></tr>
                <tr><td class="ong">Hylics</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td></td></tr>
+               <tr><td class="ong">Oxenfree</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
               
                <tr><td class="onh">Super Mario 64</td><td>N</td><td>Y</td><td>N64</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td class="onh">Super Mario Sunshine</td><td>N</td><td>Y</td><td>Gamecube</td><td>Plan to</td><td></td></tr>
@@ -127,8 +128,7 @@
                <tr><td class="onh">Crawl</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td class="onh">eden*</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td class="onh">Owlboy</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
-               <tr><td class="onh">Oxenfree</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
-               <tr><td class="onh">AER Memories of Old</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
+                <tr><td class="onh">AER Memories of Old</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td class="onh">Observer</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td class="onh">GoNNER</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td class="onh">Tales Of Berseria</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
