--- a/projects/potentials/index.html
+++ b/projects/potentials/index.html
@@ -45,7 +45,7 @@
                 <li>picam - a raspberry pi security camera system</li>
                 <li>omni-imperium - my dream controller project, because current controllers are awful</li>
                 <li>kinect usage - make some sort of 3d scanner / aware device from a kinect camera</li>
-                <li>endgame keeb - split layout, but connected with a trackbball in the middle (dactyl manuform layout)</li>
+                <li>endgame keeb - split layout, but connected with a trackball in the middle (dactyl manuform layout)</li>
             </ul>
          
 <br>
