--- a/re/side.html
+++ b/re/side.html
@@ -33,13 +33,14 @@
   </ul>
 <a href="https://relivesight.com/ongoing/">Ongoing Projects</a>
   <ul>
-    <li><a href="https://relivesight.com/projects/phone/">phone coin</a></li>
+  <li><a href="https://relivesight.com/projects/cr-10s-mod/">cr-10s mod</a></li>
   <li><a href="https://relivesight.com/projects/cyberdeck/">cyberdeck</a></li>
   <li><a href="https://relivesight.com/projects/potentials/">potentials</a></li>
   </ul>
 
 <a href="https://relivesight.com/projects/">Completed Projects</a>
 <ul>
+  <li><a href="https://relivesight.com/projects/phone/">phone coin</a></li>
   <li><a href="https://relivesight.com/projects/laptopkeeb/">laptopkeeb</a></li>
   <li><a href="https://relivesight.com/projects/2bboard/">2b board</a></li>
   <li><a href="https://relivesight.com/projects/mergeddactyl/">mergeddactyl</a></li>
