--- a/mobile/index.html
+++ b/mobile/index.html
@@ -78,6 +78,18 @@
       <div class="row imgPixel">
 
 
+
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">05/25/21</h3>
+          <p style="margin-bottom:30px;">there are no dum phrase trees, yet dum phrases are pervasive. truly a site of mysteries</p>
+        </div>
+
+       <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">04/27/20 </h3>
+          <p style="margin-bottom:30px;">update: ver.1.22474487139...</p>
+        </div>
+
+
        <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">03/28/21</h3>
           <p style="margin-bottom:30px;">site-wide redesign. you're-welcome</p>
