--- a/projects/phone/index.html
+++ b/projects/phone/index.html
@@ -52,6 +52,12 @@
             <p>but i eventually got it all to work! all i got to do is figure out how i'm gunna print it (flex filament or not) and then
               see if it works. thats all for now!
              </p>
+
+             <h1>Log 2: Dropped</h1>
+             <p> because of many issues with flex filament and circumstances outside of my control. this project is dropped. apologies~
+             </p>
+             
+
              <br>
    <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
    <p>┈ ren ​♡</p>
