--- a/reviews/paprika/mobile/index.html
+++ b/reviews/paprika/mobile/index.html
@@ -9,15 +9,11 @@
     <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="ren, relive, relivesight, omnisai, omnisairen">
     <meta name="author" content="omnisairen">
-    <link rel="icon" type="image/png" href="../../images/home/1.png" sizes="1000x1000" />
+    <link rel="icon" type="image/png" href="../../../images/home/1.png" sizes="1000x1000" />
     <link rel="stylesheet" media="screen"/>
   </head>
 
-  <!-- make it redirect to a mobile version-->
-  <script language="javascript">
-    if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
-      location.href = '/reviews/paprika/mobile';}
-  </script>
+ 
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
   <script>
