--- a/reviews/paprika/mobile/index.html
+++ b/reviews/paprika/mobile/index.html
@@ -51,8 +51,8 @@
             <p> </p><br><p> </p><br><p> </p><br>
 
            <h1 class="text-center">OVERVIEW</h2>
-            <p class="text-center">¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯</p>
-          <div class="bodystuff">
+            <p class="text-center">¯¯¯¯¯¯¯¯¯¯¯¯¯</p>
+            <div class="bodystuff">
           
             <p>&nbsp;&nbsp;&nbsp;&nbsp;
               <i><b>Paprika</b></i> (パプリカ) is a 2006 Japanese science-fiction 
