--- a/reviews/paprika/mobile/index.html
+++ b/reviews/paprika/mobile/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
     <title>「ｒｅ：Ｌｉｖｅ」</title>
   
     <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
