mobile fix maybe

--- a/reviews/paprika/mobile/index.html
+++ b/reviews/paprika/mobile/index.html
@@ -46,7 +46,7 @@
 
             <p class="bodystuff" style="text-align: center;">~ film : analysis and review ~</p>
          
-            <h1 class="text-center">Paprika : A Turbulent Dream</h1>   
+            <h1 class="text-center">Paprika : <br> A Turbulent Dream</h1>   
              
             <p> </p><br><p> </p><br><p> </p><br>
 
