--- a/writing/paprika/mobile/index.html
+++ b/writing/paprika/mobile/index.html
@@ -46,7 +46,7 @@
 
             <p class="bodystuff" style="text-align: center;">~ film : analysis and review ~</p>
          
-            <h4 class="text-center">Paprika : <br> A Turbulent Dream</h4>   
+            <h4 class="text-center">Paprika : The Hyperactive Mind</h4>   
              
             <p> </p><br><p> </p><br><p> </p><br>
 
