--- a/writing/mobile/index.html
+++ b/writing/mobile/index.html
@@ -39,7 +39,7 @@
            
           
 
-            <h1 class="text-center title">WRITINGh</h1>
+            <h1 class="text-center title">WRITINGi</h1>
             <p>This is where I put my reviews, analysis, reactions, and more for 
               anime, films, manga, games, and more. expect a naive interpretation of artistic works, detailed explorations
             of my inadequate vocabulary, and why *insert 90s aesthetic* is my favorite anime.</p>
