--- a/mobile/index.html
+++ b/mobile/index.html
@@ -43,6 +43,7 @@
         <a href="/projects" class="navi"><img src="../images/nav/flow1.png">projects</a>
         <a href="/studylogs" class="navi"><img src="../images/nav/flow1.png">studylogs</a>
         <a href="/sites" class="navi"><img src="../images/nav/flow1.png">sites</a>
+        <a href="/writing" class="navi"><img src="../images/nav/flow1.png">writing</a>
  
     
       <img src="../images/nav/navi-vmfx1.png" class="naviBanners" style="margin-top:20px;">
