--- a/projects/index.html
+++ b/projects/index.html
@@ -65,8 +65,21 @@
 						</div>
 
 						
-
+						<div id="content">
+							<img class="auditorium" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/projects/cr-10s-mod/0.png" style="width: 250px;"/>
+							<h3 style="float: right; right: 4px;">CR-10s Mod</h3>
+							<p>05/31/21</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								making the CR-10s an all in one printer! helps both functionality and aesthetics (besides
+							my shoddy job managing the cables)</li>
+							</ol>
+							<div class="label">
+								<p><a href="/projects/cr-10s-mod">Read More</a></p>
+							</div>
+						</div>			
 						
+
 						<div id="content">
 							<img class="auditorium" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/projects/phone/0.png" style="width: 250px;"/>
 							<h3 style="float: right; right: 4px;">Phone Coin</h3>
