--- a/re/side.html
+++ b/re/side.html
@@ -100,11 +100,17 @@
   <li><a href="https://relivesight.com/projects/numpad/">numpad</a></li>
 </ul>
 
-<a href="">Study Logs</a>
+<a href="https://relivesight.com/studylogs/">Study Logs</a>
   <ul>
     <li><a href="https://relivesight.com/studylogs/recursive/">recursive</a></li>
     <li><a href="https://relivesight.com/studylogs/datamosh/">datamoshing</a></li>
     <li><a href="https://relivesight.com/studylogs/dithering/">dithering</a></li>
   </ul>
+
+  
+<a href="https://relivesight.com/writing/">Writing</a>
+<ul>
+  <li><a href="https://relivesight.com/writing/paprika">paprika</a></li>
+</ul>
 
     </body></html>
