--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <a href="/artlogs" class="navi"><img src="images/nav/flow1.png">art</a>
         <a href="/manga" class="navi"><img src="images/nav/flow1.png">manga</a>
         <a href="/video" class="navi"><img src="images/nav/flow1.png">video</a>
-        <a href="/book" class="navi"><img src="images/nav/flow1.png">book</a>
-
+        <!--<a href="/book" class="navi"><img src="images/nav/flow1.png">book</a>
+        -->
         <img src="images/nav/navig-othr1.png" class="naviBanners" style="margin-top:20px;">
         <a href="/concept" class="navi"><img src="images/nav/flow1.png">concept</a>
         
