--- a/writing/paprika/index.html
+++ b/writing/paprika/index.html
@@ -134,7 +134,7 @@
               utilizing a limited vocabulary to sing the praises of a deep, symbolic, intellectually stimulating, visually-stunning
               work of art. I left <i>Paprika</i> with this feeling. The feeling that I had experienced and partially understood something
               great, but was initially incapable of speaking about what made this was the case. Thus, the analysis (and 
-              and inadvertent review) you find yourself reading right now.    
+              inadvertent review) you find yourself reading right now.    
               </p>
   
               <p>&nbsp;&nbsp;&nbsp;&nbsp;
