--- a/daily/index.html
+++ b/daily/index.html
@@ -58,7 +58,7 @@
    
     <br><br>
     <img style="width:18px" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/x-square.png" > -
-    represents an (anime) edit, which links to youtube upon click. (invisible in focused view)
+    represents an edit/video, which links to youtube upon click. (invisible in focused view)
     </p>
     
     <div class="tz-gallery">
@@ -111,7 +111,7 @@
             <div style="width:128px;" class="col-sm-12 col-md-4">
                 <div class="sign">
                     <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/005.png" 
-                    data-caption='no.005: "prismatic" <h3>- ??/??/21</h3> '>
+                    data-caption='no.005: "prismatic,test" <h3>- ??/??/21</h3> '>
                         <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/005.png" >
                     </a>
                 </div>
