--- a/daily/index.html
+++ b/daily/index.html
@@ -215,104 +215,104 @@
 
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/mobile/001.jpg"
-                        data-caption='no.001:<br> "glossy ene" <h3>- ??/??/21</h3> '>
+                        <a class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/001.jpg"
+                        data-caption='no.001:<br> "glossy ene"<br> <h3>- ??/??/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/001.png" >
                         </a>
                     </div>
                 </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/mobile/002.png" 
-                        data-caption='no.002:<br> "hyperform.one" <h3>- ??/??/21</h3> '>
+                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/002.png" 
+                        data-caption='no.002:<br> "hyperform.one"<br> <h3>- ??/??/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/002.png" >
                         </a>
                     </div>
                 </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/mobile/003.png" 
-                        data-caption='no.003:<br> "glass┈sculpture" <h3>- ??/??/21</h3> '>
+                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/003.png" 
+                        data-caption='no.003:<br> "glass┈sculpture"<br> <h3>- ??/??/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/003.png" >
                         </a>
                     </div>
                 </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/mobile/004.png" 
-                        data-caption='no.004:<br> "cc_rei" <h3>- ??/??/21</h3> '>
+                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/004.png" 
+                        data-caption='no.004:<br> "cc_rei"<br> <h3>- ??/??/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/004.png" >
                         </a>
                     </div>
                 </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/mobile/004.a.png" 
-                        data-caption='no.004.a:<br> "cc_rei-alt" <h3>- ??/??/21</h3> '>
+                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/004.a.png" 
+                        data-caption='no.004.a:<br> "cc_rei-alt"<br> <h3>- ??/??/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/004.a.png" >
                         </a>
                     </div>
                 </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/mobile/005.png" 
-                        data-caption='no.005:<br> "prismatic,test" <h3>- ??/??/21</h3> '>
+                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/005.png" 
+                        data-caption='no.005:<br> "prismatic,test"<br> <h3>- ??/??/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/005.png" >
                         </a>
                     </div>
                 </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/mobile/006.png" 
-                        data-caption='no.006:<br> "pnk.main" <h3>- ??/??/21</h3> '>
+                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/006.png" 
+                        data-caption='no.006:<br> "pnk.main"<br> <h3>- ??/??/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/006.png" >
                         </a>
                     </div>
                 </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/mobile/007.png" 
-                        data-caption='no.007:<br> "pnk.side" <h3>- ??/??/21</h3> '>
+                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/007.png" 
+                        data-caption='no.007:<br> "pnk.side"<br> <h3>- ??/??/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/007.png" >
                         </a>
                     </div>
                 </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/mobile/008.png" 
-                        data-caption='no.008:<br> "self-portrait" <h3>- ??/??/21</h3> '>
+                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/008.png" 
+                        data-caption='no.008:<br> "self-portrait"<br> <h3>- ??/??/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/008.png" >
                         </a>
                     </div>
                 </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/mobile/009.jpg" 
-                        data-caption='no.009:<br> "alt.banner" <h3>- ??/??/21</h3> '>
+                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/009.jpg" 
+                        data-caption='no.009:<br> "alt.banner"<br> <h3>- ??/??/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/009.png" >
                         </a>
                     </div>
                 </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/mobile/009.a.png" 
-                        data-caption='no.009.a:<br> "alt.banner-alt" <h3>- ??/??/21</h3> '>
+                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/009.a.png" 
+                        data-caption='no.009.a:<br> "alt.banner-alt"<br> <h3>- ??/??/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/009.a.png" >
                         </a>
                     </div>
                 </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/mobile/010.png" 
-                        data-caption='no.010:<br> "alt.pfp" <h3>- ??/??/21</h3> '>
+                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/010.png" 
+                        data-caption='no.010:<br> "alt.pfp"<br> <h3>- ??/??/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/010.jpg" >
                         </a>
                     </div>
                 </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/mobile/010.a.png" 
-                        data-caption='no.010.a:<br> "alt.pfp-alt" <h3>- ??/??/21</h3> '>
+                        <a  class="lightbox" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/010.a.png" 
+                        data-caption='no.010.a:<br> "alt.pfp-alt"<br> <h3>- ??/??/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/010.a.png" >
                         </a>
                     </div>
@@ -320,7 +320,7 @@
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://www.youtube.com/watch?v=q9kfDENUuIU" 
-                        data-caption='no.011:<br> "英雄 - 𝓈𝒽𝑜𝑜𝓉𝒾𝓃𝑔 𝓈𝓉𝒶𝓇" <h3>- ??/??/21</h3> '>
+                        data-caption='no.011:<br> "英雄 - 𝓈𝒽𝑜𝑜𝓉𝒾𝓃𝑔 𝓈𝓉𝒶𝓇"<br> <h3>- ??/??/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/011.png" >
                         </a>
                     </div>
@@ -328,15 +328,15 @@
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://www.youtube.com/watch?v=t3vXa8iZo-s" 
-                        data-caption='no.012:<br> "幽霊 - ³ᵈ ᵍʰᵒˢᵗ" <h3>- ??/??/21</h3> '>
+                        data-caption='no.012:<br> "幽霊 - ³ᵈ ᵍʰᵒˢᵗ"<br> <h3>- ??/??/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/012.png" >
                         </a>
                     </div>
                 </div>
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
-                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/mobile/013.png" 
-                        data-caption='no.013:<br> "thematon" <h3>- ??/??/21</h3> '>
+                        <a  class="lightbox" target="_blank" href="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/art/013.png" 
+                        data-caption='no.013:<br> "thematon"<br> <h3>- ??/??/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/013.png" >
                         </a>
                     </div>
@@ -344,7 +344,7 @@
                 <div style="width:128px;" class="col-sm-12 col-md-4">
                     <div class="sign">
                         <a  class="lightbox" target="_blank" href="https://www.youtube.com/watch?v=t3vXa8iZo-s" 
-                        data-caption='no.014:<br> "thematon ad" <h3>- ??/??/21</h3> '>
+                        data-caption='no.014:<br> "thematon ad"<br> <h3>- ??/??/21</h3> '>
                             <img src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/014.png" >
                         </a>
                     </div>
