--- a/daily/index.html
+++ b/daily/index.html
@@ -55,12 +55,18 @@
     and will consist of
     video, image, physical, and audio formats. [images without a listed date were created during the process of
     setting up this webpage]
-   
+
     <br><br>
+   
     <img style="width:18px" src="https://raw.githubusercontent.com/Omnisairen/relivepics/main/daily/thumb/x-square.png" > -
     represents an edit/video, which links to youtube upon click. (invisible in focused view)
     </p>
     
+    <div class ="larry">
+        <p>[the mobile version isn't as good sorry]</p>
+        <br><br>
+    </div>
+
     <div class="tz-gallery">
 
         <div class ="harry">
