--- a/daily/index.html
+++ b/daily/index.html
@@ -63,7 +63,7 @@
     </p>
     
     <div class ="larry">
-        <p>[the mobile version isn't as good sorry]</p>
+        <p>[this mobile page isn't as good sry]</p>
         <br><br>
     </div>
 
