--- a/annex/index.html
+++ b/annex/index.html
@@ -231,7 +231,8 @@
 
           </div>
    
-
+          <p class="text-center"><a href="https://www.relivesight.com">┈ return home ┈</a></p>            
+    
 
         </div>
       </div>
